--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^7.1.0",
+    "@prisma/client": "5.17.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -24,10 +24,10 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "prisma": "5.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
-    "prisma": "^7.1.0"
+    "nodemon": "^3.1.11"
   }
 }
