--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,22 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/habit_tracker"
+PORT=5001
+
+# Auth
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
-PORT=5000
-NODE_ENV=development
+
+# OAuth - Spotify
+SPOTIFY_CLIENT_ID="your_spotify_client_id"
+SPOTIFY_CLIENT_SECRET="your_spotify_client_secret"
+SPOTIFY_REDIRECT_URI="http://localhost:5173/dashboard"
+
+# OAuth - Notion
+NOTION_CLIENT_ID="your_notion_client_id"
+NOTION_CLIENT_SECRET="your_notion_client_secret"
+NOTION_REDIRECT_URI="http://localhost:5173/dashboard"
+
+# Email Service (Brevo)
+BREVO_API_KEY="your_brevo_api_key"
+SENDER_EMAIL="your_verified_sender_email@example.com"
+
+# Client
+FRONTEND_URL="http://localhost:5173"
